--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,7 +5,7 @@ $font-header: 'Space Mono', monospace;
 $font-body: 'Inconsolata', monospace;
 $font-post: 'Lora', serif;
 
-$color-alpha: #558ba3;
+$color-alpha: #55a38b;
 $color-alpha--light: #f5f3ef;
 
 $color-black: #0a0a0a;
